--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <body>
     <aside class="aside">
       <div class="wrapper">
+        <button class="toggler" type="button">
+          <i class="fas fa-bars"></i>
+        </button>
         <div class="header">
           <div class="logo">
             <i class="fa fa-times" aria-hidden="true"></i>
